--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "monk": "^0.8.1",
     "morgan": "~1.0.0",
     "nodeunit": "^0.8.6",
+    "should": "^3.3.1",
     "supertest": "^0.11.0"
   }
 }
