--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "~1.0.0",
+    "chance": "^0.5.6",
     "debug": "~0.7.4",
     "express": "~4.0.0",
     "mocha": "^1.18.2",
@@ -16,6 +17,7 @@
     "morgan": "~1.0.0",
     "nodeunit": "^0.8.6",
     "should": "^3.3.1",
+    "superagent": "^0.17.0",
     "supertest": "^0.11.0"
   }
 }
