--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "monk": "^0.8.1",
     "morgan": "~1.0.0",
     "nodeunit": "^0.8.6",
+    "oauth2orize": "^1.0.1",
+    "passport": "^0.2.0",
+    "passport-http-bearer": "^1.0.1",
     "should": "^3.3.1",
     "superagent": "^0.17.0",
     "supertest": "^0.11.0"
